# rusty-starts

./: Cargo.toml  README.md
src/: main.rs  my_application.rs  page_info.rs  style.css
