[package]
name = "rusty-starts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
chrono = "0.4.37"
gdk = "0.18.0"
gtk = { version = "0.8.1", package = "gtk4" }
sysinfo = "0.30.8"
